Se realiza cambio en angular.json

--- a/angular.json
+++ b/angular.json
@@ -19,7 +19,7 @@
           "options": {
             "outputPath": "dist/amor-en-rosa",
             "index": "src/index.html",
-            "main": "src/main.ts",
+            "browser": "src/main.ts",
             "polyfills": [],
             "tsConfig": "tsconfig.app.json",
             "assets": [
@@ -60,5 +60,8 @@
         }
       }
     }
+  },
+  "cli": {
+    "analytics": false
   }
 }
